--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <meta charset="1251" />
-    <title>Phaser Проект</title>
+    <meta charset="utf-8" />
+    <title>Phaser РџСЂРѕРµРєС‚</title>
     <style>
         * {
             padding: 0;
