--- a/index.html
+++ b/index.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8" />
-	<title>Cyber Orb demo</title>
-	<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+    <head>
+        <meta charset="utf-8" />
+        <title>Cyber Orb demo</title>
+        <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+        <script src="src/phaser-arcade-physics.2.2.2.min.js"></script>
+        <script src='src/Boot.js'></script>
+        <script src='src/MainMenu.js'></script>
+        <script src='src/Preloader.js'></script>
+        <script src='src/HowTo.js'></script>
+        <script src='src/Game.js'></script>
 
-
-</head>
-<body>
-<script>
-
-</script>
-</body>
+    </head>
+    <body>
+        <script>
+            (function(){
+            var game=new Phaser.Game(320,480,Phaser.CANVAS,'game');
+            game.state.add('Boot',Ball.Boot);
+            game.state.add('Preloader',Ball.Preloader);
+            game.state.add('MainMenu',Ball.MainMenu);
+            game.state.add('Howto',Ball.Howto);
+            game.state.add('Game',Ball.Game);
+            game.state.start('Boot');
+            }
+            )();
+            
+        </script>
+ 
+    </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
