--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </head>
     <body>
         <script>
-         alert(window.DeviceOrientationEvent.acceleration);
-         alert(window.DeviceMotionEvent.acceleration); 
+         alert(DeviceOrientationEvent);
+         alert(window.DeviceMotionEvent); 
   
             (function(){
             var game=new Phaser.Game(320,480,Phaser.CANVAS,'game');
